samples/_failures_safe/1761207015_055f1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebb30e28.c: In function ‘main’:
./samples/SAFE/__tmp_ebb30e28.c:156:9: error: expected expression at end of input
  156 |         if (
      |         ^~
./samples/SAFE/__tmp_ebb30e28.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebb30e28.c:156:9: error: expected declaration or statement at end of input
